objects/SCQuickSetup__ReassignCaseToQueue__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>SCQuickSetup__Enable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SCQuickSetup__OwnerId__c</fullName>
        <label>OwnerId</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCQuickSetup__QueueId__c</fullName>
        <label>QueueId</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>ReassignCaseToQueue</label>
</CustomObject>